--- a/medigates_sale/views/sale_order.xml
+++ b/medigates_sale/views/sale_order.xml
@@ -51,7 +51,7 @@
                     invisible="invoice_status != 'no' or state != 'sale'"/>
             </xpath>
             <xpath expr="//field[@name='state']" position="replace">
-                <field name="state" widget="statusbar" statusbar_visible="draft,sales_supervisor,sent,accountant,sale"/>
+                <field name="state" widget="statusbar" statusbar_visible="draft,sales_supervisor,sent,sales_manager,sale"/>
 
             </xpath>
             <xpath expr="//field[@name='team_id']" position="after">
