--- a/medigates_accounting/views/account.xml
+++ b/medigates_accounting/views/account.xml
@@ -80,17 +80,33 @@
     groups="account.group_account_user"
 />
 
- <record id="view_account_move_custom" model="ir.ui.view">
-        <field name="name">res.account.move.custom</field>
-        <field name="model">account.move</field>
-        <field name="inherit_id" ref="account.view_move_form"/>
+ <record id="view_picking_move_custom" model="ir.ui.view">
+        <field name="name">stock.picking.form.custom</field>
+        <field name="model">stock.picking</field>
+        <field name="inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='delivery_date']" position="after">
-                <field name="delivery_date_act"/>
+            <xpath expr="//field[@name='state']" position="attributes">
+                  <attribute  name="statusbar_visible">draft,assigned,account_approved,done</attribute>
+                </xpath>
+            <xpath expr="//button[@name='button_validate'][1]" position="replace">
+                    <button name="button_validate" invisible="state in ('draft', 'confirmed', 'done', 'cancel')" string="Validate" type="object" class="oe_highlight" groups="stock.group_stock_user" data-hotkey="v"/>
             </xpath>
-<!--     <xpath expr="//field[@name='line_ids']/list/field[@name='partner_id']" position="after">
-                <field name="is_paid"/>
-            </xpath> -->
+            <xpath expr="//button[@name='button_validate'][2]" position="replace">
+
+                    <button name="button_validate" invisible="state in ('waiting', 'assigned', 'done', 'cancel')" string="Validate" type="object" groups="stock.group_stock_user" class="o_btn_validate" data-hotkey="v"/>
+                </xpath>
+
+                
+
+               <!--  <xpath expr="//header" position="inside">
+            <field name="invoice_ids" invisible="1"/>
+            <button name="action_view_invoices"
+                    type="object"
+                    string="Invoices"
+                    class="btn-primary"
+                    invisible="invoice_ids == False"/>
+        </xpath> -->
+
         </field>
     </record> 
 
