--- a/medigates_accounting/views/account.xml
+++ b/medigates_accounting/views/account.xml
@@ -80,6 +80,21 @@
     groups="account.group_account_user"
 />
 
+   <record id="view_account_move_custom" model="ir.ui.view">
+        <field name="name">res.account.move.custom</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='delivery_date']" position="after">
+                <field name="delivery_date_act"/>
+            </xpath>
+        <xpath expr="//field[@name='line_ids']/list/field[@name='partner_id']" position="after">
+                <field name="is_paid"/>
+            </xpath>
+        </field>
+    </record> 
+
+
 <!--  <record id="view_picking_move_custom" model="ir.ui.view">
         <field name="name">stock.picking.form.custom</field>
         <field name="model">stock.picking</field>
