--- a/medigates_sale/views/sale_order.xml
+++ b/medigates_sale/views/sale_order.xml
@@ -27,7 +27,7 @@
             <xpath expr="//button[@name='action_confirm'][2]" position="replace">
                    <button name="action_confirm" data-hotkey="q"
                     string="Confirm" type="object" context="{'validate_analytic': True}"
-                    invisible="state not in ('sales_supervisor', 'sales_manager')"/>
+                    invisible="state not in ('accountant')" groups="medigates_sale.group_sale_accountant"/>
             </xpath>
       <!--       <xpath expr="//button[@name='action_confirm']" position="replace">
                    <button name="action_confirm" data-hotkey="q"
@@ -37,7 +37,11 @@
             <xpath expr="//button[@name='action_confirm']" position="after">
                  <button name="action_sales_manager" data-hotkey="q"
                     string="Sales Manager  Approval" type="object" context="{'validate_analytic': True}"
-                    invisible="state not in ('draft', 'sales_supervisor')" groups="medigates_sale.group_sale_accountant"/>
+                    invisible="state not in ('draft', 'sales_supervisor')" groups="medigates_sale.group_sale_manager"/>
+
+                    <button name="action_accountant_manager" data-hotkey="q"
+                    string="Accountant Approval" type="object" context="{'validate_analytic': True}"
+                    invisible="state not in ('draft', 'sales_manager')" groups="medigates_sale.group_sale_accountant"/>
             </xpath>
             
             <xpath expr="//button[@id='create_invoice']" position="replace">
@@ -51,7 +55,7 @@
                     invisible="invoice_status != 'no' or state != 'sale'"/>
             </xpath>
             <xpath expr="//field[@name='state']" position="replace">
-                <field name="state" widget="statusbar" statusbar_visible="draft,sales_supervisor,sent,sales_manager,sale"/>
+                <field name="state" widget="statusbar" statusbar_visible="draft,sales_supervisor,sent,sales_manager,accountant,sale"/>
 
             </xpath>
             <xpath expr="//field[@name='team_id']" position="after">
@@ -67,7 +71,20 @@
         </xpath>
         </field>
     </record>
+<!-- Define the action -->
+    <record id="action_account_sale_orders" model="ir.actions.act_window">
+        <field name="name">Sale Orders</field>
+        <field name="res_model">sale.order</field>
+        <field name="view_mode">list,form</field>
+        <field name="domain">[('state', 'in', ('sales_manager'))]</field>
+    </record>
+ <!-- Accounting main menu -->
+   <menuitem id="menu_account_sale_orders"
+              name="Sale Orders"
+              parent="account.menu_finance_receivables"         
+              sequence="1"
+              action="action_account_sale_orders"/>
 
-
+  
     </data>
 </odoo>
